# bpftesting

./: AGENTS.md  CONTEXT.md  README.md  SPEC.md  mise.toml
.devcontainer/: devcontainer.json  dockerfile
.github/skills/triage/: SKILL.md
.scratch/anti-loop-guard/issues/: 01-anti-loop-guard-decision.md
.scratch/capture-mode-type/issues/: 01-capture-mode-enum.md
.scratch/capture-store/issues/: 01-capture-store-seam.md
.scratch/hold-operator-starter-main-loop/issues/: 01-starter-controller-runtime-and-reconcile-loop.md  02-reconcile-intent-to-status-updates.md  03-hold-packet-agent-control-contract-decision.md  04-wire-agent-call-in-reconcile-happy-path.md  05-end-to-end-starter-verification-for-scale-to-zero-flow.md
.scratch/operator-grpc-adapter/issues/: 01-operator-grpc-adapter.md  02-reconciler-capture-membership.md
.scratch/staged-packet-events/issues/: 01-staged-packet-events.md  02-replay-on-scale-up.md
.scratch/traffic-driven-scaletozero-loop/issues/: 01-traffic-signal-contract-for-decisions.md  02-reconciler-scale-action-path-completion.md  02-reconciler-scale-action-path.md  03-idle-driven-scale-down-slice.md  04-traffic-driven-wake-and-replay-slice.md  05-vind-e2e-idle-and-wake-verification.md  06-daemon-idle-status-api-slice.md  07-operator-idle-decision-from-daemon-status-slice.md  08-scaletozero-per-target-idle-threshold-slice.md  09-idle-decision-failure-semantics-and-tests-slice.md
.scratch/warning-reduction/issues/: 01-warning-reduction-follow-up.md
docs/adr/: 0001-tc-ingress-tap-redirect.md  0002-ebpf-maps-as-state-plane.md  0003-per-destination-ip-capture-granularity.md  0004-userspace-polling-for-idle-detection.md  0005-grpc-operator-control-plane.md  0006-in-process-memory-staging.md  0007-anti-loop-guard.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
hold-packet/: .dockerignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
hold-packet/.cargo/: config.toml
hold-packet/hold-operator/: Cargo.toml  build.rs
hold-packet/hold-operator/src/: capture_control.rs  lib.rs  main.rs  stz.rs
hold-packet/hold-packet/: Cargo.toml  build.rs
hold-packet/hold-packet-common/: Cargo.toml
hold-packet/hold-packet-ebpf/: Cargo.toml
hold-packet/hold-packet-ebpf/src/: main.rs
mise-tasks/: install-latest-bpftool.sh  install-latest-bpftop.sh  mount-trace-debug-fs.sh  vind-down.sh  vind-stz-down.sh  vind-stz-fixture-down.sh  vind-stz-fixture-up.sh  vind-stz-starter-verify.sh  vind-stz-up.sh  vind-up.sh
testapp/: Cargo.toml  README.md
testapp/testapp/: Cargo.toml  build.rs
testapp/testapp-ebpf/: Cargo.toml
testapp/testapp-ebpf/src/: main.rs
(+19 files in other folders)
