[package]
name = "hold-operator"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
kube = {workspace = true, features = ["runtime", "derive"] }
k8s-openapi = {workspace = true, features = ["latest", "schemars"] }
schemars = { workspace = true, default-features = true }
serde = "1.0.228"
serde_json = "1.0.149"
