[package]
name = "hold-operator"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
kube = {workspace = true, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = {workspace = true, features = ["latest", "schemars"] }
schemars = { workspace = true, default-features = true }
env_logger = { workspace = true }
async-trait = "0.1"
futures = "0.3"
log = { workspace = true }
prost = "0.14.3"
rustls = { version = "0.23.40", features = ["ring"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[[bin]]
name = "hold-operator"
path = "src/main.rs"

[[bin]]
name = "crd-gen"
path = "src/bin/crd_gen.rs"
