[package]
name = "hold-packet-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
hold-packet-common = { path = "../hold-packet-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "hold-packet"
path = "src/main.rs"
